deployment/gitops/infrastructure/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cosmic-blanket
  labels:
    app.kubernetes.io/part-of: cosmic-blanket
