deployment/gitops/infrastructure/base/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: 8080
